--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ body{
 	/* position: sticky; */
     top: 0;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     margin-right: 7rem;
     align-items: center;
     font-family: "poppins-SemiBold";
@@ -111,7 +111,7 @@ body{
     padding-top: 1rem;
     width:6rem;
     height:auto;
-    margin-right: auto;
+    /* margin-right: auto; */
     margin-left: 7rem;
 }
 
@@ -123,7 +123,7 @@ body{
     margin-right: 3rem;
     padding:2rem;
     display:flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items:center;
     justify-content:space-between;
     gap: 1rem;
