--- a/css/ttd.css
+++ b/css/ttd.css
@@ -132,3 +132,54 @@
     text-align: center;
     padding-top:35%;
 }
+
+/* another div of popular destination */
+.pd--flex1{
+    display:flex;
+    margin:30px 0px 0px 40px;
+    
+}
+
+.pd--flex1--heading{
+    padding-right:20px;
+}
+
+.pd--flex1--para{
+    border-left:2px solid grey;
+    padding:30px;
+}
+
+/* popular destination flex2 */
+.pd--flex2{
+    display:flex;
+    justify-content:space-around;
+    margin:20px;
+}
+
+.pd--flex2--image1{
+    background-image: url("../images/bg-3.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height:400px;
+    width:420px;
+    border-radius:20px;
+}
+
+.pd--flex2--image2{
+    background-image: url("../images/bg-3.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height:400px;
+    width:420px;
+    border-radius:20px;
+}
+
+.pd--flex2--image3{
+    background-image: url("../images/bg-3.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height:400px;
+    width:420px;
+    border-radius:20px;
+}
+
