--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,13 @@
     display:flex;
     flex-direction: column;
     justify-content: center;
+    min-height: 100vh;
+    /* min-width: 50vh; */
+    background-color: bisque;
+    padding-left: 4vw;
+    padding-right: 4vw;
 }
+
 
 .main--section-sectors-districts{
     /* transform: translate(-50%,-50%); */
@@ -26,10 +32,10 @@
 .main--section-sectors-districts > *{
     
     /* transform:translateY(50%); */
-    display:flex;
+    /* display:flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
     /* flex-grow: 1; */
     height:25rem;
     width: 20rem;
@@ -37,6 +43,10 @@
 }
 
 .main--section-text{
+    /* position: relative;
+    transform: translate(-50%,-50%); */
+    position:absolute;
+    /* transform: translateY(50%); */
     font-size: 2rem;
     font-family: "poppins-bold";
     color: antiquewhite;
@@ -45,18 +55,79 @@
     z-index: 2;
 }
 
-.main{
-    min-height: 100vh;
-    min-width: 50vh;
-    background-color: bisque;
+.main--section-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+.main--section-card:hover  .main--section-text{
+    opacity: 0;
+    transition: opacity 1s ease;
+    /* display: none; */
 }
 
+.main--section-card:hover .main--section-text-info{
+    /* display: block; */
+    transform: translateY(50%);
+    transition: transform 0.5s ease;
+    transform-origin: bottom top;
+
+    /* z-index: 2; */
+}
+
+.main--section-card .main--section-text-info{
+    transition: transform 0.5s ease;
+}
+
+.main--section-text-info{
+    text-align: center;
+    /* display: none; */
+    color:bisque;
+    font-size: 2rem;
+    border-radius: 54px 0px 54px 10px;
+    -webkit-border-radius: 54px 0px 54px 10px;
+    -moz-border-radius: 54px 0px 54px 10px;
+    background-color: blueviolet;
+    position: relative;
+    width:100%;
+    height: 100%;
+    transform: translateY(100%);
+    transform-origin: top bottom;
+
+}
+
+.main--section-card:hover::before{
+    /* content: "";
+    border-radius: 54px 0px 54px 10px;
+    -webkit-border-radius: 54px 0px 54px 10px;
+    -moz-border-radius: 54px 0px 54px 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 1);
+    transition: box-shadow 1s ease;
+    width: 40vh;
+    background-color:rgba(24, 23, 23, 0.356);
+    position: relative;
+    z-index: -1;
+    width: 100%;
+    height: 100%; */
+}
 
 .main--section-sectors-districts > *{
 border-radius: 54px 0px 54px 10px;
 -webkit-border-radius: 54px 0px 54px 10px;
 -moz-border-radius: 54px 0px 54px 10px;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0), 0 6px 20px rgba(0, 0, 0, 0); /* Box shadow */
+
+
 /* overflow: hidden; */
+
+}
+
+.main--section-card:hover{
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 1); /* Box shadow */
+transition: box-shadow 0.3s ease;
+/* width: 40vh; */
 
 }
 
@@ -98,19 +169,6 @@ border-radius: 54px 0px 54px 10px;
     background-size:cover;
     /* transform: scale(5); */
 
-}
-
-.main--section-card:hover::before{
-    content: "ARDENT north";
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
-    pointer-events: none; /* Ensure the overlay does not interfere with mouse events */
-    z-index: 5; 
-    transition: 2s;
 }
 
 .main--section-heading{
