--- a/css/ttd.css
+++ b/css/ttd.css
@@ -1,190 +1,179 @@
-/* things to do--flex1 */
-.ttd{
-    /* padding-left: 2rem; */
-    /* padding-right: 2rem; */
+.ttd--flex1 {
+  display: flex;
+  margin-top: 30px
 }
-.ttd--flex1{
-    display: flex;    
-    margin-top:30px;
+.ttd--flex-heading {
+  z-index: 1;
+  color: #faebd7;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: poppins-semibold
 }
-
-.ttd--flex1-heading{
-    margin-left:40px;
+.ttd--flex1-para {
+  padding: 30px 30px 0 30px;
+  border-left: 2px solid grey
 }
-
-.ttd--flex1-para{
-    padding:30px 30px 0px 30px;
-    border-left:2px solid grey;
+.ttd--flex2 {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 30px
 }
-
-/* things to do flex2 */
-.ttd--flex2{
-    display: flex;
-    justify-content: space-evenly;
-    margin-top:30px;
+.ttd--flex2--image1 {
+  background-image: url("../images/bg-2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 300px;
+  width: 300px;
+  border-radius: 20px
 }
-
-.ttd--flex2--image1{
-    background-image: url("../images/bg-2.jpg");
-    /* background-size: cover; */
-    background-size: cover;
-    background-repeat: no-repeat;
-    height:300px;
-    width: 300px;
-    border-radius:20px;
+.ttd--flex2--image1--heading {
+  color: #fff;
+  text-align: center;
+  padding-top: 35%
 }
-
-.ttd--flex2--image1--heading{
-    color: #fff;
-    text-align: center;
-    padding-top:35%;
+.ttd--flex2--image2 {
+  background-image: url("../images/ttd-destination/culture.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 300px;
+  width: 300px;
+  border-radius: 20px
 }
-
-.ttd--flex2--image2{
-    background-image: url("../images/ttd-destination/culture.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height:300px;
-    width: 300px;
-    border-radius:20px;
+.ttd--flex2--image2--heading {
+  color: #fff;
+  text-align: center;
+  padding-top: 35%
 }
-
-.ttd--flex2--image2--heading{
-    color: #fff;
-    text-align: center;
-    padding-top:35%;
+.ttd--flex2--image3 {
+  background-image: url("../images/ttd-destination/food.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 300px;
+  width: 300px;
+  border-radius: 20px
 }
-
-
-.ttd--flex2--image3{
-    background-image: url("../images/ttd-destination/food.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height:300px;
-    width: 300px;
-    border-radius:20px;
+.ttd--flex2--image3--heading {
+  color: #fff;
+  text-align: center;
+  padding-top: 35%
 }
-
-.ttd--flex2--image3--heading{
-    color: #fff;
-    text-align: center;
-    padding-top:35%;
+.ttd--flex2--image4 {
+  background-image: url("../images/ttd-destination/family.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 300px;
+  width: 300px;
+  border-radius: 20px
 }
-
-.ttd--flex2--image4{
-    background-image: url("../images/ttd-destination/family.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height:300px;
-    width: 300px;
-    border-radius:20px;
+.ttd--flex2--image4--heading {
+  color: #fff;
+  text-align: center;
+  padding-top: 35%
 }
-
-.ttd--flex2--image4--heading{
-    color: #fff;
-    text-align: center;
-    padding-top:35%;
+.ttd--flex3 {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 40px
 }
-
-/* things to do flex3 */
-.ttd--flex3{
-    display: flex;
-    justify-content: space-evenly;
-    margin-top:40px;
+.ttd--flex3--image1 {
+  background-image: url("../images/ttd-destination/gangtok.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 300px;
+  width: 300px;
+  border-radius: 18px
 }
-
-.ttd--flex3--image1{
-    background-image: url("../images/ttd-destination/gangtok.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height:300px;
-    width:300px;
-    border-radius:18px;
+.ttd--flex3--image1--heading {
+  color: #fff;
+  text-align: center;
+  padding-top: 35%
 }
-
-.ttd--flex3--image1--heading{
-    color:#fff;
-    text-align: center;
-    padding-top:35%;
+.ttd--flex3--image2 {
+  background-image: url("../images/bg-4.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 300px;
+  width: 650px;
+  border-radius: 18px
 }
-
-.ttd--flex3--image2{
-    background-image: url("../images/bg-4.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height:300px;
-    width:650px;
-    border-radius:18px;
+.ttd--flex3--image2--heading {
+  color: #fff;
+  text-align: center;
+  padding-top: 35%
 }
-
-.ttd--flex3--image2--heading{
-    color:#fff;
-    text-align: center;
-    padding-top:35%;
+.ttd--flex3--image3 {
+  background-image: url("../images/ttd-destination/home\ stay.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 300px;
+  width: 300px;
+  border-radius: 18px
 }
-
-.ttd--flex3--image3{
-    background-image: url("../images/ttd-destination/home\ stay.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height:300px;
-    width:300px;
-    border-radius:18px;
+.ttd--flex3--image3--heading {
+  color: #fff;
+  text-align: center;
+  padding-top: 35%
 }
-
-.ttd--flex3--image3--heading{
-    color:#fff;
-    text-align: center;
-    padding-top:35%;
+.pd--flex1 {
+  display: flex;
+  margin: 30px 0 0 40px
 }
-
-/* another div of popular destination */
-.pd--flex1{
-    display:flex;
-    margin:30px 0px 0px 40px;
-    
+.pd--flex1--heading {
+  padding-right: 20px
 }
-
-.pd--flex1--heading{
-    padding-right:20px;
+.pd--flex1--para {
+  border-left: 2px solid grey;
+  padding: 30px
 }
-
-.pd--flex1--para{
-    border-left:2px solid grey;
-    padding:30px;
+.pd--flex2 {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px
 }
-
-/* popular destination flex2 */
-.pd--flex2{
-    display:flex;
-    justify-content:space-around;
-    margin:20px;
+.pd--flex2--image1 {
+  background-image: url("../images/ttd-destination/destination1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 400px;
+  width: 420px;
+  border-radius: 20px
 }
-
-.pd--flex2--image1{
-    background-image: url("../images/ttd-destination/destination1.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height:400px;
-    width:420px;
-    border-radius:20px;
+.pd--flex2--image2 {
+  background-image: url("../images/ttd-destination/destination2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 400px;
+  width: 420px;
+  border-radius: 20px
 }
-
-.pd--flex2--image2{
-    background-image: url("../images/ttd-destination/destination2.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height:400px;
-    width:420px;
-    border-radius:20px;
+.pd--flex2--image3 {
+  background-image: url("../images/ttd-destination/destination3.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 400px;
+  width: 420px;
+  border-radius: 20px
 }
-
-.pd--flex2--image3{
-    background-image: url("../images/ttd-destination/destination3.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height:400px;
-    width:420px;
-    border-radius:20px;
+.util-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center
 }
-
+.util--card-shadow {
+  box-shadow: 0 8px 16px rgba(0,0,0,.2),0 12px 40px rgba(0,0,0,.2)
+}
+.ttd--flex-info-card {
+  position: relative;
+  top: 100%;
+  left: 0;
+  height: inherit;
+  width: inherit;
+  z-index: 3;
+  background-color: #7fffd4;
+  transition: transform .3s ease,background-color .3s ease
+}
+.ttd--flex-info-card:hover::before {
+  transform: translateY(0);
+  background-color: red
+}
