--- a/css/main.css
+++ b/css/main.css
@@ -5,53 +5,30 @@
     min-height: 100vh;
     /* min-width: 50vh; */
     background-color: bisque;
-    padding-left: 4vw;
-    padding-right: 4vw;
+    padding-left: 5vw;
+    padding-right: 5vw;
 }
 
 
 .main--section-sectors-districts{
-    /* transform: translate(-50%,-50%); */
     display:flex;
     flex-direction: row;
 
-    /* margin: auto auto; */
-    /* margin-left: 1rem; */
-    /* margin-right:2rem; */
     justify-content: space-around;
-
-    /* align-items: center; */
-    /* align-content: center; */
     
-}
-
-.main--section-sectors-districts-north{
-    /* background-image: url(); */
 }
 
 .main--section-sectors-districts > *{
-    
-    /* transform:translateY(50%); */
-    /* display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; */
-    /* flex-grow: 1; */
     height:25rem;
     width: 20rem;
-    /* border: solid 1px black; */
 }
 
 .main--section-text{
-    /* position: relative;
-    transform: translate(-50%,-50%); */
     position:absolute;
-    /* transform: translateY(50%); */
     font-size: 2rem;
     font-family: "poppins-bold";
     color: antiquewhite;
     text-transform: uppercase;
-    /* text-align: left; */
     z-index: 2;
 }
 
@@ -65,31 +42,30 @@
 .main--section-card:hover  .main--section-text{
     opacity: 0;
     transition: opacity 1s ease;
-    /* display: none; */
 }
 
 .main--section-card:hover .main--section-text-info{
-    /* display: block; */
     transform: translateY(50%);
     transition: transform 0.5s ease;
     transform-origin: bottom top;
 
-    /* z-index: 2; */
 }
+
 
 .main--section-card .main--section-text-info{
     transition: transform 0.5s ease;
 }
 
 .main--section-text-info{
-    text-align: center;
-    /* display: none; */
+    padding: 1rem;
+    text-align:center;
     color:bisque;
-    font-size: 2rem;
+    font-size: 1rem;
+    font-family: "poppins-light";
     border-radius: 54px 0px 54px 10px;
     -webkit-border-radius: 54px 0px 54px 10px;
     -moz-border-radius: 54px 0px 54px 10px;
-    background-color: blueviolet;
+    background-color: rgba(73, 72, 75, 0.756);
     position: relative;
     width:100%;
     height: 100%;
@@ -98,49 +74,32 @@
 
 }
 
-.main--section-card:hover::before{
-    /* content: "";
-    border-radius: 54px 0px 54px 10px;
-    -webkit-border-radius: 54px 0px 54px 10px;
-    -moz-border-radius: 54px 0px 54px 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 1);
-    transition: box-shadow 1s ease;
-    width: 40vh;
-    background-color:rgba(24, 23, 23, 0.356);
-    position: relative;
-    z-index: -1;
-    width: 100%;
-    height: 100%; */
-}
 
 .main--section-sectors-districts > *{
 border-radius: 54px 0px 54px 10px;
 -webkit-border-radius: 54px 0px 54px 10px;
 -moz-border-radius: 54px 0px 54px 10px;
-box-shadow: 0 4px 8px rgba(0, 0, 0, 0), 0 6px 20px rgba(0, 0, 0, 0); /* Box shadow */
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0), 0 6px 20px rgba(0, 0, 0, 0);
 
 
-/* overflow: hidden; */
 
 }
 
 .main--section-card:hover{
-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 1); /* Box shadow */
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 1);
 transition: box-shadow 0.3s ease;
-/* width: 40vh; */
-
 }
 
-/* .main--section-sectors-card:hover{
-    border-radius: 54px;
-} */
+.main--section-card{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0), 0 6px 20px rgba(0, 0, 0, 0);
+transition: box-shadow 0.8s ease;
+}
 
 .main--section-sectors-districts-north{
     background-image: url("../images/tiles/zenith North.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
-    /* transform: scale(5); */
 
 }
 
@@ -149,7 +108,6 @@ transition: box-shadow 0.3s ease;
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
-    /* transform: scale(5); */
 
 }
 
@@ -158,7 +116,6 @@ transition: box-shadow 0.3s ease;
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
-    /* transform: scale(5); */
 
 }
 
@@ -167,7 +124,6 @@ transition: box-shadow 0.3s ease;
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
-    /* transform: scale(5); */
 
 }
 
