--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
     justify-content: center;
     min-height: 100vh;
     /* min-width: 50vh; */
-    background-color: bisque;
+    background-color: rgb(255, 255, 255);
     padding-left: 5vw;
     padding-right: 5vw;
 }
@@ -30,6 +30,8 @@
     color: antiquewhite;
     text-transform: uppercase;
     z-index: 2;
+    opacity: 1;
+    transition: opacity 0.6s ease-in;
 }
 
 .main--section-card{
@@ -43,6 +45,7 @@
     opacity: 0;
     transition: opacity 1s ease;
 }
+
 
 .main--section-card:hover .main--section-text-info{
     transform: translateY(50%);
@@ -88,6 +91,7 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0), 0 6px 20px rgba(0, 0, 0, 0);
 .main--section-card:hover{
 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 1);
 transition: box-shadow 0.3s ease;
+/* background:linear-gradient(to bottom, rgba(253, 253, 253, 0) 0%, rgba(244, 242, 242, 0) 100%) */
 }
 
 .main--section-card{
@@ -96,7 +100,7 @@ transition: box-shadow 0.8s ease;
 }
 
 .main--section-sectors-districts-north{
-    background-image: url("../images/tiles/zenith North.jpeg");
+    background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.415) 0%, rgba(0, 0, 0, 0.5) 100%), url("../images/tiles/zenith North.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
@@ -104,7 +108,7 @@ transition: box-shadow 0.8s ease;
 }
 
 .main--section-sectors-districts-south{
-    background-image: url("../images/tiles/verdentsouth.jpeg");
+    background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.415) 0%, rgba(0, 0, 0, 0.5) 100%), url("../images/tiles/verdentsouth.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
@@ -112,7 +116,7 @@ transition: box-shadow 0.8s ease;
 }
 
 .main--section-sectors-districts-east{
-    background-image: url("../images/tiles/aurora\ east.jpeg");
+    background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.415) 0%, rgba(0, 0, 0, 0.5) 100%), url("../images/tiles/aurora\ east.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
@@ -120,7 +124,7 @@ transition: box-shadow 0.8s ease;
 }
 
 .main--section-sectors-districts-west{
-    background-image: url("../images/tiles/mystic\ west.jpeg");
+    background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.415) 0%, rgba(0, 0, 0, 0.5) 100%), url("../images/tiles/mystic\ west.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
