--- a/css/ttd.css
+++ b/css/ttd.css
@@ -155,7 +155,7 @@
 }
 .pd--flex2 {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   margin: 20px
 }
 .pd--flex2--image1 {
@@ -182,6 +182,7 @@
   width: 420px;
   border-radius:5px;
 }
+
 .util-center {
   display: flex;
   flex-direction: column;
