--- a/css/ttd.css
+++ b/css/ttd.css
@@ -270,3 +270,52 @@
   width:350px;
   border-radius:20px;
 }
+
+/* footer */
+footer{
+  background-color:#024d27;
+  margin-top:4%;
+  height:300px;
+}
+
+.footer-main{
+  display: flex;
+  justify-content:space-evenly;
+}
+
+.footer-main-contacts{
+  margin-top:3%;
+  margin-right:20%;
+}
+
+.footer-main-contacts-icons{
+  height:2rem;  
+  width:2rem;
+  display: flex;
+  margin:20px;
+}
+
+.footer-main-contacts-icons-para{
+  color:#fff;
+  padding-left:20px;
+}
+
+.footer-flex1-heading{
+  padding:40px 0px 20px 0px;
+  color:white;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size:20px;
+}
+
+.footer-flex1-heading-li{
+  display:flex;
+  flex-direction: column;
+}
+
+.anchor{
+  text-decoration:none;
+  line-height:30px;
+  text-align: center;
+  color:white;
+}
+
