--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,11 @@
 .main{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    min-height: 100vh;
+    /* display:flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    height: 100vh;
     /* min-width: 50vh; */
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(214, 207, 207);
     padding-left: 5vw;
     padding-right: 5vw;
 }
@@ -13,6 +14,7 @@
 .main--section-sectors-districts{
     display:flex;
     flex-direction: row;
+    margin-top: 3rem;
 
     justify-content: space-around;
     
@@ -31,7 +33,9 @@
     text-transform: uppercase;
     z-index: 2;
     opacity: 1;
-    transition: opacity 0.6s ease-in;
+    transform: translateY(10px) scale(1);
+    transition: transform .4s ease-in;
+    /* transition: opacity 0.6s ease-in; */
 }
 
 .main--section-card{
@@ -45,7 +49,8 @@
     /* opacity: 0; */
     /* border-bottom: 1px solid antiquewhite; */
     /* padding-bottom: 5px; */
-    transition: border 5s ease;
+    transform: translateY(-5px) scale(1.1);
+    transition: transform .4s ease-out;
 }
 
 
@@ -81,9 +86,9 @@
 
 
 .main--section-sectors-districts > *{
-border-radius: 54px 0px 54px 10px;
--webkit-border-radius: 54px 0px 54px 10px;
--moz-border-radius: 54px 0px 54px 10px;
+border-radius: 54px 54px 54px 54px;
+/* -webkit-border-radius: 54px 0px 54px 10px; */
+/* -moz-border-radius: 54px 0px 54px 10px; */
 box-shadow: 0 4px 8px rgba(0, 0, 0, 0), 0 6px 20px rgba(0, 0, 0, 0);
 
 
@@ -134,9 +139,13 @@ transition: box-shadow 0.8s ease;
 }
 
 .main--section-heading{
-    margin:3rem;
-    font-size: 5rem;
-    text-align: center;
-    padding:0;
-    display: none;
+    box-shadow: inset;
+    text-transform: uppercase;
+    font-family: "poppins-bold";
+    /* margin-top:3rem; */
+    padding-top: 5rem;
+    font-size: 3rem;
+    text-align: center; 
+    /* padding:0; */
+    /* display: none; */
 }
