--- a/css/ttd.css
+++ b/css/ttd.css
@@ -243,12 +243,19 @@
 .pd-flex1--heading{
   color:white;
   text-align: center;
-  padding-top:50%;
-  font-size:40px;
+  position: relative;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  /* font-size:40px; */
+  color: antiquewhite;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-family: "poppins-bold";
 }
 
 .pd-flex2{
-  background-image: url("../images/ttd-destination/destination1.jpg");
+  background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), url("../images/ttd-destination/destination1.jpg");
   background-size: cover;
   height:350px;
   width:350px;
@@ -256,7 +263,7 @@
 }
 
 .pd-flex3{
-  background-image: url("../images/ttd-destination/destination2.jpg");
+  background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), url("../images/ttd-destination/destination2.jpg");
   background-size: cover;
   height:350px;
   width:350px;
@@ -264,7 +271,7 @@
 }
 
 .pd-flex4{
-  background-image: url("../images/ttd-destination/destination3.jpg");
+  background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), url("../images/ttd-destination/destination3.jpg");
   background-size: cover;
   height:350px;
   width:350px;
