--- a/css/practice.css
+++ b/css/practice.css
@@ -8,7 +8,7 @@ body{
     background: aliceblue;
 }
 
-.container{
+.property{
     position: absolute;
     top:50%;
     left: 50%;
@@ -19,7 +19,7 @@ body{
     box-shadow:0 30px 50px #dbdbdb;
 }
 
-.container .slide .item{
+.property .property--slide .property--slide-item{
     width:200px;
     height:300px;
     position: absolute;
@@ -33,8 +33,8 @@ body{
     transition: 0.5s ;
 }
 
-.slide .item:nth-child(1),
-.slide .item:nth-child(2){
+.property--slide .property--slide-item:nth-child(1),
+.property--slide .property--slide-item:nth-child(2){
     top: 0;
     left: 0;
     transform: translate(0, 0);
@@ -43,25 +43,25 @@ body{
     width:100%;
 }
 
-.slide .item:nth-child(3){
+.property--slide .property--slide-item:nth-child(3){
     left:50%;
 }
 
-.slide .item:nth-child(4){
+.property--slide .property--slide-item:nth-child(4){
     left: calc(50% + 220px);
 }
 
-.slide .item:nth-child(3){
+.property--slide .property--slide-item:nth-child(3){
     left: calc(50% + 440px);
 }
 
 /* here n=0,1,2,3,.... */
-.slide .item:nth-child(n + 6){
+.property--slide .property--slide-item:nth-child(n + 6){
     left: calc(50% + 440px);
     opacity: 0;
 }
 
-.item .content{
+.property--slide-item .property--slide-item-content{
     position: absolute;
     top: 50%;
     left:100px;
@@ -73,11 +73,11 @@ body{
     display: none;
 }
 
-.slide .item:nth-child(2) .content{
+.property--slide .property--slide-item:nth-child(2) .property--slide-item-content{
     display: block;
 }
 
-.content .name{
+.property--slide-item-content .property--slide-item-content-name{
     font-size: 40px;
     text-transform: uppercase;
     font-weight: bold;
@@ -85,7 +85,7 @@ body{
     animation:animate 1s ease-in-out 1 forwards;
 }
 
-.content .des{
+.property--slide-item-content .property--slide-item-content-des{
     margin-top: 10px;
     margin-bottom: 20px;
     opacity: 0;
@@ -94,7 +94,7 @@ body{
     font-size:30px;
 }
 
-.content button{
+.property--slide-item-content button{
     padding: 10px 20px;
     border: none;
     cursor:pointer;
