--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     color:#024d27;
+    /* width: 100vh; */
 }
 
 body{
+    /* height:100vh; */
     overflow-x: hidden;
     /* background-image: url("../images/textile-pattern.jpeg"); */
 }
@@ -18,6 +20,10 @@ body{
 
 }
 
+.header-heading-services-text{
+    font-size: 1rem;
+}
+
 .header-heading-services-container{
     display: flex;
     flex-direction: column;
@@ -28,20 +34,21 @@ body{
 
 .header-heading-services{
     margin-top: 2rem;
-    width:40vw; 
+    /* width:40vw;  */
+    gap:8vw;
     display: flex;
     justify-content:space-around;
 }
 .container{
     
-    height:100vh;
-    width:100vw;
+    min-height: 100%;
+    min-width: 100%;
     background-color: rgb(147, 194, 161);
     font-family: "poppins-light";
     display: grid;
 
-    grid-template-columns: 1fr;
-    grid-template-rows: max-content 4fr 1fr;
+    /* grid-template-columns: repeat(auto-fit,minmax(300px,1fr)); */
+    grid-template-rows:repeat(auto-fit,1fr);
 
 }
 
@@ -67,8 +74,9 @@ body{
     background-image:linear-gradient(90deg, rgba(146,146,151,0.5831466375612745) 0%, rgba(188, 188, 193, 0.589) 53%, rgba(120,122,123,0.692390335040266) 100%), url("../images/buddha_park.jpg");
      -webkit-backdrop-filter: blur(5px); /* Use for Safari 9+, Edge 17+ (not a mistake) and iOS Safari 9.2+ */
   backdrop-filter: blur(5px);
-    min-height:100vh;
-    min-width: 100vw;
+    /* min-width: 100vw; */
+    min-height: 80vh;
+    /* min-width: 100vw; */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -112,8 +120,8 @@ body{
     margin-top: 1.5rem;
     width:inherit;
     height: 35rem;
-    margin-left: 3rem;
-    margin-right: 3rem;
+    /* margin-left: 3rem; */
+    /* margin-right: 3rem; */
     padding:2rem;
     display:flex;
     flex-direction: column;
@@ -202,3 +210,4 @@ body{
     top:50%;
     transform: translate(-50%,-50%);
 }
+
