--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,8 @@ body{
 }
 .container{
     
-    min-height: 100%;
-    min-width: 100%;
+    /* min-height: 100%; */
+    /* min-width: 100%; */
     background-color: rgb(147, 194, 161);
     font-family: "poppins-light";
     display: grid;
@@ -155,6 +155,7 @@ body{
 }
 
 .header-heading-title-text{
+    max-width: 400px;
     font-family: "poppins-bold";
     font-size: 3rem;
     text-transform: capitalize;
