Added curve to the header

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,8 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     -moz-background-size: cover;
+    clip-path: url(#curveClip);
+    -webkit-clip-path: url(#curveClip);
 }
 
 .header-nav{
