--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,8 @@
  /* Extra small devices (phones, 600px and down) */
  @media only screen and (max-width: 480px) {
+    .pop-img{
+        width:4rem;
+    }
     .header-nav{
         display: none;
     }
