--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body{
     
     /* min-height: 100%; */
     /* min-width: 100%; */
-    background-color: rgb(147, 194, 161);
+    /* background-color: rgb(147, 194, 161); */
     font-family: "poppins-light";
     display: grid;
 
