--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ body{
     display:flex;
     flex-direction: column;
     align-items:center;
-    justify-content:space-between;
+    /* justify-content:space-between; */
     gap: 1rem;
     border-radius: 25px;
     background-position: center;
